fixed issue with styling of heading on mobile

--- a/content/styles/marketing.css
+++ b/content/styles/marketing.css
@@ -278,6 +278,7 @@ a.pure-button-primary {
     /* We increase the header font size even more */
     .splash-head {
         font-size: 300%;
+        line-height: 100px;
     }
 }
 
